# itmo-ct-gpu-lectures

./: 1.md  2.md  3.md  4.md  5.md  README.md
examples/2/: CMakeLists.txt  aplusb.cl  main.c
examples/3/: CMakeLists.txt  aplusb.cl  main.c
examples/4/: CMakeLists.txt  main.c  matrix-multiply.cl
examples/5/: CMakeLists.txt  main.c  matrix-multiply.cl
md/: 2.md  3.md  4.md  5.md  6.md
